--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <main>
     <section>
     <ul>
-      <li><a href="">My Best Checkmates</a></li>
+      <li><a href="checkmates-site/c-index.html">My Best Checkmates</a></li>
     </ul>
 </section>
 </main>
