--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="blogtitle">My Projects</header>
+    <header class="blogtitle">Projects (2025)</header>
   <main>
     <section>
     <ul>
