--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -16,7 +16,7 @@
             <div class="date">December 25, 2024</div>
         </div>
         <div class="gallery-item">
-            <img src="img2.png" alt="Checkmate 2">
+            <img src="checkmates-site/c-images/img2.png" alt="Checkmate 2">
             <div class="date">December 26, 2024</div>
         </div>
     </div>
