--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -12,11 +12,11 @@
 
     <div class="gallery">
         <div class="gallery-item">
-            <img src="checkmates-site/c-images/img1.jpg" alt="Checkmate 1">
+            <img src="" alt="Checkmate 1">
             <div class="date">December 25, 2024</div>
         </div>
         <div class="gallery-item">
-            <img src="checkmates-site/c-images/img2.png" alt="Checkmate 2">
+            <img src="" alt="Checkmate 2">
             <div class="date">December 26, 2024</div>
         </div>
     </div>
