--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -4,22 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Best Checkmates</title>
-    <link rel="stylesheet" href="c-styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <h1>My Best Checkmates</h1>
-
     <div class="gallery">
         <div class="gallery-item">
-            <img src="" alt="Checkmate 1">
-            <div class="date">December 25, 2024</div>
+            <img src="img1.png" alt="Checkmate 1">
+            <div class="description">Queen sacrifice leads to beautiful back-rank mate</div>
         </div>
         <div class="gallery-item">
-            <img src="" alt="Checkmate 2">
-            <div class="date">December 26, 2024</div>
+            <img src="img2.png" alt="Checkmate 2">
+            <div class="description">Knight fork checkmate after opponent's blunder</div>
         </div>
     </div>
 
+    <div class="gallery">
+        <div class="gallery-item">
+            <img src="img1.png" alt="Checkmate 3">
+            <div class="description">Smothered mate with the knight in the corner</div>
+        </div>
+        <div class="gallery-item">
+            <img src="img2.png" alt="Checkmate 4">
+            <div class="description">Bishop and queen combination mate</div>
+        </div>
+    </div>
+
+    <div class="gallery">
+        <div class="gallery-item">
+            <img src="img1.png" alt="Checkmate 5">
+            <div class="description">Double rook mate on the seventh rank</div>
+        </div>
+        <div class="gallery-item">
+            <img src="img2.png" alt="Checkmate 6">
+            <div class="description">Scholar's mate in under 10 moves</div>
+        </div>
+    </div>
 </body>
 </html>
