--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -9,43 +9,36 @@
 <body>
     <h1>My Best Checkmates</h1>
     
-    <!-- Each image gets its own gallery container -->
+    <!-- First gallery container with two images -->
     <div class="gallery">
         <div class="gallery-item">
             <img src="img1.png" alt="Checkmate 1">
             <div class="description">Queen sacrifice leads to beautiful back-rank mate</div>
         </div>
-    </div>
-
-    <div class="gallery">
         <div class="gallery-item">
             <img src="img2.png" alt="Checkmate 2">
             <div class="description">Knight fork checkmate after opponent's blunder</div>
         </div>
     </div>
 
+    <!-- Second gallery container with two images -->
     <div class="gallery">
         <div class="gallery-item">
             <img src="img3.png" alt="Checkmate 3">
             <div class="description">Smothered mate with the knight in the corner</div>
         </div>
-    </div>
-
-    <div class="gallery">
         <div class="gallery-item">
             <img src="img4.png" alt="Checkmate 4">
             <div class="description">Bishop and queen combination mate</div>
         </div>
     </div>
 
+    <!-- Third gallery container with two images -->
     <div class="gallery">
         <div class="gallery-item">
             <img src="img5.png" alt="Checkmate 5">
             <div class="description">Double rook mate on the seventh rank</div>
         </div>
-    </div>
-
-    <div class="gallery">
         <div class="gallery-item">
             <img src="img6.png" alt="Checkmate 6">
             <div class="description">Scholar's mate in under 10 moves</div>
