--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>My Best Checkmates</h1>
     
-    <!-- First gallery container with two images -->
+    <!-- First gallery - Shows 1 on mobile -->
     <div class="gallery">
         <div class="gallery-item">
             <img src="img1.png" alt="Checkmate 1">
@@ -21,7 +21,19 @@
         </div>
     </div>
 
-    <!-- Second gallery container with two images -->
+    <!-- Second gallery - Shows 2 on mobile -->
+    <div class="gallery">
+        <div class="gallery-item">
+            <img src="img2.png" alt="Checkmate 2">
+            <div class="description">Knight fork checkmate after opponent's blunder</div>
+        </div>
+        <div class="gallery-item">
+            <img src="img3.png" alt="Checkmate 3">
+            <div class="description">Smothered mate with the knight in the corner</div>
+        </div>
+    </div>
+
+    <!-- Third gallery - Shows 3 on mobile -->
     <div class="gallery">
         <div class="gallery-item">
             <img src="img3.png" alt="Checkmate 3">
@@ -33,7 +45,19 @@
         </div>
     </div>
 
-    <!-- Third gallery container with two images -->
+    <!-- Fourth gallery - Shows 4 on mobile -->
+    <div class="gallery">
+        <div class="gallery-item">
+            <img src="img4.png" alt="Checkmate 4">
+            <div class="description">Bishop and queen combination mate</div>
+        </div>
+        <div class="gallery-item">
+            <img src="img5.png" alt="Checkmate 5">
+            <div class="description">Double rook mate on the seventh rank</div>
+        </div>
+    </div>
+
+    <!-- Fifth gallery - Shows 5 on mobile -->
     <div class="gallery">
         <div class="gallery-item">
             <img src="img5.png" alt="Checkmate 5">
@@ -42,6 +66,17 @@
         <div class="gallery-item">
             <img src="img6.png" alt="Checkmate 6">
             <div class="description">Scholar's mate in under 10 moves</div>
+        </div>
+    </div>
+
+    <!-- Sixth gallery - Shows 6 on mobile -->
+    <div class="gallery">
+        <div class="gallery-item">
+            <img src="img6.png" alt="Checkmate 6">
+            <div class="description">Scholar's mate in under 10 moves</div>
+        </div>
+        <!-- Empty gallery-item for maintaining grid layout -->
+        <div class="gallery-item">
         </div>
     </div>
 </body>
