--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Best Checkmates</title>
-    <link rel="stylesheet" href="c-styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>My Best Checkmates</h1>
     
-    <!-- First gallery - Shows 1 on mobile -->
     <div class="gallery">
         <div class="gallery-item">
             <img src="img1.png" alt="Checkmate 1">
@@ -21,19 +20,6 @@
         </div>
     </div>
 
-    <!-- Second gallery - Shows 2 on mobile -->
-    <div class="gallery">
-        <div class="gallery-item">
-            <img src="img2.png" alt="Checkmate 2">
-            <div class="description">Knight fork checkmate after opponent's blunder</div>
-        </div>
-        <div class="gallery-item">
-            <img src="img3.png" alt="Checkmate 3">
-            <div class="description">Smothered mate with the knight in the corner</div>
-        </div>
-    </div>
-
-    <!-- Third gallery - Shows 3 on mobile -->
     <div class="gallery">
         <div class="gallery-item">
             <img src="img3.png" alt="Checkmate 3">
@@ -45,19 +31,6 @@
         </div>
     </div>
 
-    <!-- Fourth gallery - Shows 4 on mobile -->
-    <div class="gallery">
-        <div class="gallery-item">
-            <img src="img4.png" alt="Checkmate 4">
-            <div class="description">Bishop and queen combination mate</div>
-        </div>
-        <div class="gallery-item">
-            <img src="img5.png" alt="Checkmate 5">
-            <div class="description">Double rook mate on the seventh rank</div>
-        </div>
-    </div>
-
-    <!-- Fifth gallery - Shows 5 on mobile -->
     <div class="gallery">
         <div class="gallery-item">
             <img src="img5.png" alt="Checkmate 5">
@@ -66,17 +39,6 @@
         <div class="gallery-item">
             <img src="img6.png" alt="Checkmate 6">
             <div class="description">Scholar's mate in under 10 moves</div>
-        </div>
-    </div>
-
-    <!-- Sixth gallery - Shows 6 on mobile -->
-    <div class="gallery">
-        <div class="gallery-item">
-            <img src="img6.png" alt="Checkmate 6">
-            <div class="description">Scholar's mate in under 10 moves</div>
-        </div>
-        <!-- Empty gallery-item for maintaining grid layout -->
-        <div class="gallery-item">
         </div>
     </div>
 </body>
