--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -9,33 +9,48 @@
 <body>
     <h1>My Best Checkmates</h1>
     
+    <!-- Gallery 1: Shows image 1 on mobile -->
     <div class="gallery">
         <div class="gallery-item">
             <img src="img1.png" alt="Checkmate 1">
             <div class="description">Queen sacrifice leads to beautiful back-rank mate</div>
         </div>
+    </div>
+
+    <!-- Gallery 2: Shows image 2 on mobile -->
+    <div class="gallery">
         <div class="gallery-item">
             <img src="img2.png" alt="Checkmate 2">
             <div class="description">Knight fork checkmate after opponent's blunder</div>
         </div>
     </div>
 
+    <!-- Gallery 3: Shows image 3 on mobile -->
     <div class="gallery">
         <div class="gallery-item">
             <img src="img3.png" alt="Checkmate 3">
             <div class="description">Smothered mate with the knight in the corner</div>
         </div>
+    </div>
+
+    <!-- Gallery 4: Shows image 4 on mobile -->
+    <div class="gallery">
         <div class="gallery-item">
             <img src="img4.png" alt="Checkmate 4">
             <div class="description">Bishop and queen combination mate</div>
         </div>
     </div>
 
+    <!-- Gallery 5: Shows image 5 on mobile -->
     <div class="gallery">
         <div class="gallery-item">
             <img src="img5.png" alt="Checkmate 5">
             <div class="description">Double rook mate on the seventh rank</div>
         </div>
+    </div>
+
+    <!-- Gallery 6: Shows image 6 on mobile -->
+    <div class="gallery">
         <div class="gallery-item">
             <img src="img6.png" alt="Checkmate 6">
             <div class="description">Scholar's mate in under 10 moves</div>
