--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -13,13 +13,13 @@
     <div class="gallery-container">
         <div class="gallery">
             <div class="gallery-item">
-                <img src="img1.png" alt="Checkmate 1">
+                <img src="img1.jpg" alt="Checkmate 1">
                 <div class="description">Queen sacrifice leads to beautiful back-rank mate</div>
             </div>
         </div>
         <div class="gallery">
             <div class="gallery-item">
-                <img src="img2.png" alt="Checkmate 2">
+                <img src="img2.jpg" alt="Checkmate 2">
                 <div class="description">Knight fork checkmate after opponent's blunder</div>
             </div>
         </div>
