--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -13,7 +13,7 @@
     <div class="gallery-container">
         <div class="gallery">
             <div class="gallery-item">
-                <img src="img1.jpg" alt="Checkmate 1">
+                <img src="c-images/img1.jpg" alt="Checkmate 1">
                 <div class="description">Queen sacrifice leads to beautiful back-rank mate</div>
             </div>
         </div>
