--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="gallery">
             <div class="gallery-item">
-                <img src="img2.jpg" alt="Checkmate 2">
+                <img src="c-images/img2.png" alt="Checkmate 2">
                 <div class="description">Knight fork checkmate after opponent's blunder</div>
             </div>
         </div>
