--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -13,13 +13,13 @@
     <div class="gallery-container">
         <div class="gallery">
             <div class="gallery-item">
-                <img src="c-images/img1.jpg" alt="Checkmate 1">
+                <img src="c-images/img1.jpeg" alt="Checkmate 1">
                 <div class="description">Queen sacrifice leads to beautiful back-rank mate</div>
             </div>
         </div>
         <div class="gallery">
             <div class="gallery-item">
-                <img src="c-images/img2.png" alt="Checkmate 2">
+                <img src="c-images/img2.jpeg" alt="Checkmate 2">
                 <div class="description">Knight fork checkmate after opponent's blunder</div>
             </div>
         </div>
@@ -29,13 +29,13 @@
     <div class="gallery-container">
         <div class="gallery">
             <div class="gallery-item">
-                <img src="img3.png" alt="Checkmate 3">
+                <img src="c-images/img3.jpeg" alt="Checkmate 3">
                 <div class="description">Smothered mate with the knight in the corner</div>
             </div>
         </div>
         <div class="gallery">
             <div class="gallery-item">
-                <img src="img4.png" alt="Checkmate 4">
+                <img src="c-images/img4.jpeg" alt="Checkmate 4">
                 <div class="description">Bishop and queen combination mate</div>
             </div>
         </div>
@@ -45,13 +45,13 @@
     <div class="gallery-container">
         <div class="gallery">
             <div class="gallery-item">
-                <img src="img5.png" alt="Checkmate 5">
+                <img src="c-images/img5.jpeg" alt="Checkmate 5">
                 <div class="description">Double rook mate on the seventh rank</div>
             </div>
         </div>
         <div class="gallery">
             <div class="gallery-item">
-                <img src="img6.png" alt="Checkmate 6">
+                <img src="c-images/img6.jpeg" alt="Checkmate 6">
                 <div class="description">Scholar's mate in under 10 moves</div>
             </div>
         </div>
