--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -14,13 +14,13 @@
         <div class="gallery">
             <div class="gallery-item">
                 <img src="c-images/img1.jpeg" alt="Checkmate 1">
-                <div class="description">Queen sacrifice leads to beautiful back-rank mate</div>
+                <div class="description">Bishop pair and queen checkmate</div>
             </div>
         </div>
         <div class="gallery">
             <div class="gallery-item">
                 <img src="c-images/img2.jpeg" alt="Checkmate 2">
-                <div class="description">Knight fork checkmate after opponent's blunder</div>
+                <div class="description">Bishop pair and rook checkmate</div>
             </div>
         </div>
     </div>
@@ -30,13 +30,13 @@
         <div class="gallery">
             <div class="gallery-item">
                 <img src="c-images/img3.jpeg" alt="Checkmate 3">
-                <div class="description">Smothered mate with the knight in the corner</div>
+                <div class="description">Rook pair and bishop checkmate</div>
             </div>
         </div>
         <div class="gallery">
             <div class="gallery-item">
                 <img src="c-images/img4.jpeg" alt="Checkmate 4">
-                <div class="description">Bishop and queen combination mate</div>
+                <div class="description">Knight-Bishop checkmate</div>
             </div>
         </div>
     </div>
@@ -46,13 +46,13 @@
         <div class="gallery">
             <div class="gallery-item">
                 <img src="c-images/img5.jpeg" alt="Checkmate 5">
-                <div class="description">Double rook mate on the seventh rank</div>
+                <div class="description">Rook pair and pawn checkmate</div>
             </div>
         </div>
         <div class="gallery">
             <div class="gallery-item">
                 <img src="c-images/img6.jpeg" alt="Checkmate 6">
-                <div class="description">Scholar's mate in under 10 moves</div>
+                <div class="description">Knight-Bishop checkmate</div>
             </div>
         </div>
     </div>
