--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -14,13 +14,13 @@
         <div class="gallery">
             <div class="gallery-item">
                 <img src="c-images/img1.jpeg" alt="Checkmate 1">
-                <div class="description">Bishop pair-queen checkmate</div>
+                <div class="description">Bishop pair-Queen checkmate</div>
             </div>
         </div>
         <div class="gallery">
             <div class="gallery-item">
                 <img src="c-images/img2.jpeg" alt="Checkmate 2">
-                <div class="description">Bishop pair-rook checkmate</div>
+                <div class="description">Bishop pair-Rook checkmate</div>
             </div>
         </div>
     </div>
@@ -30,7 +30,7 @@
         <div class="gallery">
             <div class="gallery-item">
                 <img src="c-images/img3.jpeg" alt="Checkmate 3">
-                <div class="description">Rook pair-bishop checkmate</div>
+                <div class="description">Rook pair-Bishop checkmate</div>
             </div>
         </div>
         <div class="gallery">
@@ -46,7 +46,7 @@
         <div class="gallery">
             <div class="gallery-item">
                 <img src="c-images/img5.jpeg" alt="Checkmate 5">
-                <div class="description">Rook pair-pawn checkmate</div>
+                <div class="description">Rook pair-Pawn checkmate</div>
             </div>
         </div>
         <div class="gallery">
