--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects (2025)</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="a098560b-7c89-4b8e-ad08-35005f7dcbbb"></script>
 </head>
 <body>
     <header class="blogtitle">Projects (2025)</header>
