--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Best Checkmates</title>
     <link rel="stylesheet" href="c-styles.css">
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="a098560b-7c89-4b8e-ad08-35005f7dcbbb"></script>
 </head>
 <body>
     <h1>My Best Checkmates</h1>
