--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     <h1>My Best Checkmates</h1>
+
+    <p>Hellooooo! 🙋🏻‍♂️ 
+
+I'm Sreekar, and I love chess to the moon and back! ❤️
+
+This is a collection of all my best checkmates on chesscom. Take a look! 
+
+And if you're up for a game, let's play! :)</p>
     
     <!-- First pair of galleries -->
     <div class="gallery-container">
