--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -8,6 +8,11 @@
     <script defer src="https://cloud.umami.is/script.js" data-website-id="a098560b-7c89-4b8e-ad08-35005f7dcbbb"></script>
 </head>
 <body>
+
+    <div class="play-button">
+    <a href="https://www.chess.com/member/sreekar98" target="_blank">Let's Play!</a>
+</div>
+    
     <h1>My Best Checkmates</h1>
     
     <!-- First pair of galleries -->
