--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
 
-    <div class="play-button">
-    <a href="https://www.chess.com/member/sreekar98" target="_blank">Let's Play!</a>
-</div>
-    
-    <h1>My Best Checkmates</h1>
+    <div class="header-container">
+        <h1>My Best Checkmates</h1>
+        <div class="play-button">
+            <a href="https://www.chess.com/member/YOUR_USERNAME">Let's Play!</a>
+        </div>
+    </div>
     
     <!-- First pair of galleries -->
     <div class="gallery-container">
