--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
         <h1>My Best Checkmates</h1>
+
+    <div class="play-button">
+    <a href="https://www.chess.com/member/YOUR_USERNAME" target="_blank">Let's Play!</a>
+</div>
     
     <!-- First pair of galleries -->
     <div class="gallery-container">
