--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="play-button">
-    <a href="https://www.chess.com/member/sreekar98" target="_blank">Let's Play!</a>
+    <a href="https://link.chess.com/friend/9dxZ7V" target="_blank">Let's Play!</a>
 </div>
 
         <h1>My Best Checkmates</h1>
