--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -11,7 +11,8 @@
 
         <h1>My Best Checkmates</h1>
 
-        <p class="intro">Hieee, I'm Sreekar! This is a collection of my best checkmates. Up for a game? Let's <a href="https://chess.com/member/sreekar98" class="chess-link">connect on chesscom</a>.</p>
+        <p class="intro">Hieee, I'm Sreekar! 🙋🏻‍♂️ This is a collection of my best checkmates. 
+            Up for a game? Let's <a href="https://chess.com/member/sreekar98" class="chess-link">connect on chesscom</a>.</p>
     
     <!-- First pair of galleries -->
     <div class="gallery-container">
