--- a/checkmates-site/c-index.html
+++ b/checkmates-site/c-index.html
@@ -41,7 +41,7 @@
         <div class="gallery">
             <div class="gallery-item">
                 <img src="c-images/img4.jpeg" alt="Checkmate 4">
-                <div class="description">Knight-Bishop checkmate</div>
+                <div class="description">Bishop-Knight checkmate</div>
             </div>
         </div>
     </div>
