--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section>
     <ul>
       <li><a href="checkmates-site/c-index.html">My Best Checkmates</a></li>
+      <li><a href="wait/w-index.html">How long you made me wait</a></li>
     </ul>
 </section>
 </main>
