--- a/wait/w-index.html
+++ b/wait/w-index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How long you made me wait</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -31,23 +32,25 @@
         }
 
         .container {
+            width: 100%;
             max-width: 800px;
-            margin: 2rem auto;
+            margin: 0 auto;
             padding: 1rem;
         }
 
         .card {
             background: var(--bg-secondary);
             border-radius: 12px;
-            padding: 2rem;
+            padding: 1.5rem;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+            margin: 0.5rem;
         }
 
         h1 {
             text-align: center;
             color: var(--text-primary);
-            margin-bottom: 2rem;
-            font-size: 1.875rem;
+            margin-bottom: 1.5rem;
+            font-size: clamp(1.5rem, 5vw, 1.875rem);
             font-weight: 600;
         }
 
@@ -59,16 +62,16 @@
         .timer-container {
             background: var(--bg-primary);
             border-radius: 12px;
-            padding: 2rem;
-            margin: 1.5rem 0;
+            padding: 1.5rem 1rem;
+            margin: 1rem 0;
             text-align: center;
         }
 
         .timer {
-            font-size: 4rem;
+            font-size: clamp(2.5rem, 8vw, 4rem);
             font-family: monospace;
             color: var(--text-primary);
-            margin: 1rem 0;
+            margin: 0.5rem 0;
             font-weight: 600;
             transition: color 0.3s ease;
         }
@@ -78,16 +81,16 @@
         }
 
         .controls {
-            display: flex;
-            justify-content: center;
-            gap: 1rem;
-            margin: 2rem 0;
-            flex-wrap: wrap;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+            gap: 0.75rem;
+            margin: 1.5rem 0;
+            padding: 0 0.5rem;
         }
 
         .btn {
             font-size: 1rem;
-            padding: 0.75rem 1.5rem;
+            padding: 0.75rem;
             border: none;
             border-radius: 8px;
             cursor: pointer;
@@ -96,8 +99,8 @@
             display: flex;
             align-items: center;
             gap: 0.5rem;
-            min-width: 140px;
             justify-content: center;
+            width: 100%;
         }
 
         .btn:hover {
@@ -125,28 +128,30 @@
         }
 
         .table-container {
-            margin-top: 2rem;
+            margin-top: 1.5rem;
             border-radius: 8px;
-            overflow: hidden;
+            overflow-x: auto;
             background: var(--bg-secondary);
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
+            min-width: 300px;
         }
 
         th {
             background: var(--bg-primary);
             color: var(--text-secondary);
-            padding: 1rem;
+            padding: 0.75rem;
             text-align: left;
             font-weight: 600;
             font-size: 0.875rem;
+            white-space: nowrap;
         }
 
         td {
-            padding: 1rem;
+            padding: 0.75rem;
             border-bottom: 1px solid var(--bg-primary);
             color: var(--text-secondary);
         }
@@ -159,7 +164,7 @@
             background: var(--danger);
             color: white;
             border: none;
-            padding: 0.5rem 1rem;
+            padding: 0.5rem;
             border-radius: 6px;
             cursor: pointer;
             transition: all 0.2s ease;
@@ -168,6 +173,9 @@
             align-items: center;
             gap: 0.25rem;
             opacity: 0.9;
+            width: 100%;
+            justify-content: center;
+            max-width: 100px;
         }
 
         .delete-btn:hover {
@@ -176,36 +184,40 @@
 
         .empty-state {
             text-align: center;
-            padding: 2rem;
+            padding: 1.5rem;
             color: var(--text-secondary);
             font-style: italic;
         }
 
-        @media (max-width: 640px) {
+        @media (max-width: 480px) {
             .container {
                 padding: 0.5rem;
-                margin: 1rem auto;
-            }
-
-            .timer {
-                font-size: 3rem;
-            }
-
-            .controls {
-                flex-direction: column;
-            }
-
-            .btn {
-                width: 100%;
             }
 
             .card {
                 padding: 1rem;
+                margin: 0;
+                border-radius: 0;
+            }
+
+            .timer-container {
+                padding: 1rem 0.5rem;
+            }
+
+            th, td {
+                padding: 0.625rem;
+                font-size: 0.875rem;
+            }
+
+            .delete-btn {
+                padding: 0.375rem;
+                font-size: 0.75rem;
             }
         }
     </style>
 </head>
 <body>
+    <!-- Rest of the HTML and JavaScript remains the same -->
     <div class="container">
         <div class="card">
             <h1><i class="fas fa-clock"></i>How long you made me wait</h1>
