--- a/wait/w-index.html
+++ b/wait/w-index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How long you made me wait</title>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="a098560b-7c89-4b8e-ad08-35005f7dcbbb"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
