--- a/bet/b-index.html
+++ b/bet/b-index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bet on my Tweet!</title>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="a098560b-7c89-4b8e-ad08-35005f7dcbbb"></script>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
