--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <ul>
       <li><a href="checkmates-site/c-index.html">My Best Checkmates</a></li>
       <li><a href="wait/w-index.html">How long you made me wait</a></li>
+      <li><a href="bet/b-index.html">Bet on my Tweet</a></li>
+        
     </ul>
 </section>
 </main>
