--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <main>
     <section>
     <ul>
+      <li><a href="T-Gen/t-index.html">T-Shirt Size Chart Generator</a></li>
       <li><a href="checkmates-site/c-index.html">My Best Checkmates</a></li>
       <li><a href="wait/w-index.html">How long you made me wait</a></li>
       <li><a href="bet/b-index.html">Bet on my Tweet</a></li>
