--- a/bet/b-index.html
+++ b/bet/b-index.html
@@ -277,8 +277,11 @@
         </div>
 
         <div class="status-message">
-            Tweet went live at 1:35 PM IST. Winner will be announced after 24 hours. Stay tuned!
+            Congratulations Aravind Balla! You won the bet! 🎉
         </div>
+
+        <!-- Tweet went live at 1:35 PM IST. Winner will be announced after 24 hours. Stay tuned! -->
+        
     </div>
 
     <script>
