--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="wait/w-index.html">How long you made me wait</a></li>
       <li><a href="bet/b-index.html">Bet on my Tweet</a></li>
       <li><a href="T-Gen/t-index.html">T-Shirt Size Chart Generator</a></li>
+      <li><a href="wfc/wf-index.html">Cafe Rating</a></li>
 
         
     </ul>
