--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="bet/b-index.html">Bet on my Tweet</a></li>
       <li><a href="T-Gen/t-index.html">T-Shirt Size Chart Generator</a></li>
       <li><a href="wfc/wf-index.html">Cafe Rating</a></li>
+      <li><a href="Sub/s-index.html">Subscription Tracker</a></li>
 
         
     </ul>
