--- a/Sub/s-index.html
+++ b/Sub/s-index.html
@@ -534,7 +534,7 @@
 class NotificationService {
     constructor() {
         // Replace with your Google Apps Script Web App URL
-        this.webhookUrl = 'YOUR_WEBAPP_URL';
+        this.webhookUrl = 'https://script.google.com/macros/s/AKfycbw84O9ZIhjm97rARURM-sYfmu5Qf7ToKS1CakEedHM13kI6hh3ebQTkepgTWSpE2uybJA/exec';
     }
 
     async sendNotification(subscription, status) {
