--- a/md-html/m-index.html
+++ b/md-html/m-index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Markdown to HTML Converter</title>
+    <title>Markdown to HTML Converter</title>
     <style>
         body {
             font-family: system-ui, -apple-system, sans-serif;
