--- a/writing-tracker/w-index.html
+++ b/writing-tracker/w-index.html
@@ -103,6 +103,78 @@
             padding: 0.5rem 1rem;
             opacity: 0.8;
         }
+
+        /* Mobile Optimization Styles */
+@media screen and (max-width: 480px) {
+    body {
+        padding: 1rem;
+    }
+
+    .container {
+        padding: 1rem;
+        margin: 0;
+    }
+
+    h1 {
+        font-size: 2rem;
+        margin-bottom: 1rem;
+    }
+
+    .input-group {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        margin: 1rem 0;
+    }
+
+    input {
+        width: 100%;
+        margin-right: 0;
+        font-size: 1rem;
+        padding: 0.8rem;
+        /* Improve touch target size */
+        min-height: 44px;
+    }
+
+    button {
+        width: 100%;
+        padding: 0.8rem;
+        margin: 0;
+        /* Improve touch target size */
+        min-height: 44px;
+    }
+
+    .stats {
+        margin-top: 1rem;
+        padding: 1rem;
+    }
+
+    .total-words {
+        font-size: 2rem;
+    }
+
+    .edit-total {
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+
+    /* Prevent zoom on input focus on iOS */
+    input[type="number"] {
+        font-size: 16px;
+    }
+}
+
+/* Add touch-friendly active states for mobile */
+@media (hover: none) {
+    button:active {
+        background: #6a9870;
+        transform: translateY(1px);
+    }
+
+    .total-words:active {
+        opacity: 0.7;
+    }
+}
     </style>
 </head>
 <body>
