--- a/writing-tracker/w-index.html
+++ b/writing-tracker/w-index.html
@@ -258,6 +258,15 @@
                 updateTotal();
             }
         });
+
+        // Fix for mobile viewport height issues
+let vh = window.innerHeight * 0.01;
+document.documentElement.style.setProperty('--vh', `${vh}px`);
+
+window.addEventListener('resize', () => {
+    let vh = window.innerHeight * 0.01;
+    document.documentElement.style.setProperty('--vh', `${vh}px`);
+});
     </script>
 </body>
 </html>
