--- a/writing-tracker/w-index.html
+++ b/writing-tracker/w-index.html
@@ -12,6 +12,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             min-height: 100vh;
+            min-height: calc(var(--vh, 1vh) * 100);
             background: linear-gradient(135deg, #ff6b6b, #556270);
             color: white;
             display: flex;
