--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <li><a href="T-Gen/t-index.html">T-Shirt Size Chart Generator</a></li>
       <li><a href="wfc/wf-index.html">Cafe Rating</a></li>
       <li><a href="Sub/s-index.html">Subscription Tracker</a></li>
+      <li><a href="writing-tracker/w-index.html">Writing Tracker</a></li>
+
+        
     </ul>
 </section>
 </main>
