--- a/writing-tracker/w-index.html
+++ b/writing-tracker/w-index.html
@@ -154,19 +154,19 @@
                 margin: 1rem 0;
             }
 
-            input {
-                width: 100%;
-                padding: 0.75rem;
-                font-size: 1rem;
-                height: 40px;
-            }
+ input {
+        width: 80%; /* Changed from 100% */
+        padding: 0.75rem;
+        font-size: 1rem;
+        height: 40px;
+    }
 
-            button {
-                width: 100%;
-                padding: 0.75rem;
-                font-size: 1rem;
-                height: 40px;
-            }
+    button {
+        width: 80%; /* Changed from 100% */
+        padding: 0.75rem;
+        font-size: 1rem;
+        height: 40px;
+    }
 
             .stats {
                 margin-top: 1rem;
