--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li><a href="wfc/wf-index.html">Cafe Rating</a></li>
       <li><a href="Sub/s-index.html">Subscription Tracker</a></li>
       <li><a href="writing-tracker/w-index.html">Writing Tracker</a></li>
-      <li><a href="sreekar-code/booktunes/index.html">BookTunes</a></li>
+      <li><a href="booktunes/index.html">BookTunes</a></li>
 
         
     </ul>
